--- a/doc/mockups/Main Window.glade
+++ b/doc/mockups/Main Window.glade
@@ -9,6 +9,38 @@
     <property name="step_increment">8</property>
     <property name="page_increment">32</property>
   </object>
+  <object class="GtkAboutDialog" id="aboutdialog1">
+    <property name="can_focus">False</property>
+    <property name="type">popup</property>
+    <property name="type_hint">dialog</property>
+    <property name="program_name">Halberd RPG Editor</property>
+    <property name="version">0.0.1</property>
+    <property name="website">http://www.github.com/Df458/Halberd</property>
+    <property name="website_label" translatable="yes">Github</property>
+    <property name="authors">Hugues Ross</property>
+    <property name="logo_icon_name">go-home</property>
+    <child internal-child="vbox">
+      <object class="GtkBox" id="aboutdialog-vbox1">
+        <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child internal-child="action_area">
+          <object class="GtkButtonBox" id="aboutdialog-action_area1">
+            <property name="can_focus">False</property>
+            <property name="layout_style">end</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">False</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <placeholder/>
+        </child>
+      </object>
+    </child>
+  </object>
   <object class="GtkListStore" id="liststore1">
     <columns>
       <!-- column-name Name -->
